--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -59,9 +59,17 @@
     "context": "amount title",
     "string": "Refunded amount"
   },
+  "authorize amount title": {
+    "context": "authorize amount title",
+    "string": "Authorized amount"
+  },
   "by preposition": {
     "context": "by preposition",
     "string": "by"
+  },
+  "capture amount title": {
+    "context": "capture amount title",
+    "string": "Captured amount"
   },
   "channel hidden": {
     "context": "channel publication status",
@@ -170,6 +178,38 @@
     "context": "order line discount updated title",
     "string": "{productName} discount was updated by "
   },
+  "event title payment authorize failed": {
+    "context": "authorize payment fail event title",
+    "string": "Payment authorize failed"
+  },
+  "event title payment authorized": {
+    "context": "authorized payment event title",
+    "string": "Payment authorized"
+  },
+  "event title payment capture failed": {
+    "context": "capture payment fail event title",
+    "string": "Payment capture failed"
+  },
+  "event title payment captured": {
+    "context": "captured payment event title",
+    "string": "Payment captured"
+  },
+  "event title payment refund failed": {
+    "context": "refund payment fail event title",
+    "string": "Refund failed"
+  },
+  "event title payment refunded": {
+    "context": "refund payment event title",
+    "string": "Payment refunded"
+  },
+  "event title payment void failed": {
+    "context": "void payment fail event title",
+    "string": "Payment void failed"
+  },
+  "event title payment voided": {
+    "context": "voided payment event title",
+    "string": "Payment voided"
+  },
   "event title refunded": {
     "context": "refunded event title",
     "string": "Products were refunded by "
@@ -181,6 +221,10 @@
   "event title returned": {
     "context": "returned event title",
     "string": "Products were returned by"
+  },
+  "fail reason title": {
+    "context": "fail reason title",
+    "string": "Fail reason"
   },
   "fixed amount subtitle id": {
     "context": "Fixed amount subtitle",
@@ -480,9 +524,17 @@
     "context": "no warehouses info",
     "string": "There are no warehouses set up for your store. To add stock quantity to the product please <a>configure a warehouse</a>"
   },
+  "psp reference title": {
+    "context": "psp reference title",
+    "string": "PSP Reference"
+  },
   "published channel": {
     "context": "product label",
     "string": "Published"
+  },
+  "refund amount title": {
+    "context": "refund amount title",
+    "string": "Refunded amount"
   },
   "saleDetailsPageCategoriesQuantity": {
     "context": "number of categories",
@@ -7523,6 +7575,10 @@
   "unavailable for purchase": {
     "context": "product unavailability",
     "string": "Unavailable for purchase"
+  },
+  "void amount title": {
+    "context": "void amount title",
+    "string": "Voided amount"
   },
   "voucherDetailsUnassignCategory": {
     "context": "unassign category from voucher, button",
